<resources>
    <string name="app_name">磯永吉</string>

    <string name="reset">reset</string>
    <string name="input">Input</string>
    <string name="robot">Robot</string>
    <string name="camera_on">camera on</string>
    <string name="error_occurred_while_creating_the_file">Error occurred while creating the File</string>
    <string name="capture_image">capture image\n</string>
    <string name="back_to_main">Back</string>
    <string name="error_occurred">error occurred</string>
    <string name="received">received\n</string>
    <string name="send">Send</string>
    <string name="voice_chat">Voice Chat</string>
    <string name="text_chat">Text Chat</string>
    <string name="send_image">Send Image</string>
    <string name="text_input">Text Input</string>
    <string name="hint">hint</string>
    <string name="kebbitwo">歡迎使用KebbiThree</string>
    <string name="select_image">select image</string>
    <string name="received_messages_will_appear_here">Received messages will appear here</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="diary">Diary</string>
    <string name="reminder">Reminder</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="stop">Stop</string>
    <string name="chat">chat</string>
    <string name="start_chat">你好，愛閱！</string>
    <string name="start_chat1">你好，Ai讀！</string>
    <string name="function">Function</string>

    <string name="voice_recognition">voice_recognition</string>
    <string name="start_voice_recognition">Start Voice Recognition</string>
    <string name="stop_voice_recognition">stop_voice_recognition</string>

    <string name="control_action">Control Action</string>
    <string name="speak">Speak</string>
    <string name="enter_ip_address">Enter IP Address</string>

    <!--Robot Motion Status -->
    <string name="thinking">thinking</string>
    <string name="waiting">Waiting for user input…</string>
    <string name="listening">Start Listening</string>
    <string name="speaking">Speaking</string>
    <string name="error">error\n</string>
    <string name="test_motion">Test Motion</string>
    <string name="test_expression">Test Expression</string>

    <string name="start_listening">Start Listening</string>
    <string name="stop_listening">Stop Listening</string>
    <string name="robot_control_test">Robot Control Test</string>
    <string name="connect_socket">Connect Socket</string>

    <string name="movement_go">movement go</string>
    <string name="movement_stop">movement stop</string>
    <string name="turn_seconds">turn seconds</string>
    <string name="turn">turn</string>
    <string name="forward_backward_seconds">forward backward seconds</string>
    <string name="movement_text_wheel">movement text wheel</string>
    <string name="detect_drop">detect_drop</string>
    <string name="forward_backward">forward_backward</string>
    <string name="movement_text_wheel_locked">Wheel is locked</string>
    <string name="movement_text_wheel_unlocked">Wheel is unlocked</string>
    <string name="show_saved_motions">Show Saved Motions</string>
    <string name="xiao_test">xiao</string>
    <string name="xiao">Xiao</string>
    <string name="asr_mixed">ASR Mixed</string>
    <string name="settings">Settings</string>
    <string name="this_is_xiao_fragment">This is Xiao Fragment</string>
    <string name="this_is_robot_control_fragment">This is Robot Control Fragment</string>
    <string name="this_is_asr_mixed_fragment">This is ASR Mixed Fragment</string>
    <string name="result_will_be_displayed_here">Result will be displayed here</string>
    <string name="ip_address">IP Address</string>
    <string name="port">Port</string>
    <string name="setting">Setting</string>
    <string name="連線">連線</string>
    <string name="waiting_result">waiting_result</string>
    <string name="interview">biography</string>
    <string name="username">使用者名稱</string>
    <string name="password">密碼</string>
    <string name="login">登入</string>
    <string name="register">註冊</string>
    <string name="login_system">登入系統</string>
    <string name="back">上一頁</string>
    <string name="tap2start">輕按以開始</string>
    <string name="setting_page">設定頁</string>
    <string name="user_information">使用者資訊</string>
    <string name="id">編號:</string>
    <string name="Username">使用者名稱：</string>
    <string name="Password">密碼：</string>
    <string name="created_date">創建日期：</string>
    <string name="robot_information">機器人資訊</string>
    <string name="personality">人格</string>
    <string name="enfp">ENFP</string>
    <string name="entp">ENTP</string>
    <string name="infj">INFJ</string>
    <string name="infp">INFP</string>
    <string name="chat_type">對話類型</string>
    <string name="logout">登出</string>
    <string name="save">儲存</string>
    <string name="start">你好！</string>
    <string name="face">機器人臉</string>

</resources>