<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:fillViewport="true"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="5">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginBottom="32dp"
                android:layout_weight="3"
                android:autofillHints="user123"
                android:gravity="start|center_vertical"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="30sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="5">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginBottom="48dp"
                android:layout_weight="3"
                android:autofillHints="password123"
                android:gravity="start|center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textSize="30sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:weightSum="5"
            tools:ignore="ExtraText">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/loginButton"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1.5"
                android:text="@string/login"
                android:textSize="22sp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/button_corner_radius" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerButton"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1.5"
                android:text="@string/register"
                android:textSize="22sp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/button_corner_radius" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
